--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/node": "^12.12.55",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.3",
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.4.3",
+    "react-slick": "^0.27.11",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
     "typescript": "^3.7.5"
   },
